NP-9334-CourseAccessChecker-Fagperson, functionality implemented